<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Legacy</string>
    <string name="featured_live_tv">Favorite Live TV</string>
    <string name="featured_movies">Featured Movies</string>
    <string name="featured_series">Featured Series</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="no_internet">No Internet Connection Detected Please make sure your device is connected to the Internet</string>
    <string name="retry">RETRY</string>
    <string name="more_help">MORE HELP</string>
    <string name="step_1">Step-1)</string>
    <string name="unplug">Unplug the power cord from your Internet modem, wait for 60 seconds, then plug it back in, wait up to 5 minutes. Then power off/on your receiver to try to connect again.</string>
    <string name="step_2">Step-2)</string>
    <string name="check_wifi">Only if you\'re using a wireless connection, check your WiFi settings in your receiver (STB) by pressing the SETUP button on your remote, and make sure the WiFi is connected successfully. Then power off/on your receiver to try to connect again.</string>
    <string name="step_3">Step-3)</string>
    <string name="contact">Contact your Internet provider for further help.</string>
    <string name="step_4">Step-4)</string>
    <string name="still">) If you\'re still experiencing problems even after you contact your Internet provider, then you may contact your reseller for further troubleshooting.</string>
    <string name="this_is_test_description">this is test description</string>
    <string name="cheap">Cheap</string>
    <string name="sorry_but_there_is_a_problem_with_the_broadcast_source">Sorry, but there is a problem with the broadcast source</string>
    <string name="tv_guide">TV Guide/</string>
    <string name="update_data">Update data....</string>
    <string name="download">DOWNLOAD</string>
    <string name="request_download">Downloading latest version.</string>
    <string name="enter_series_name_to_search">Enter series name to search</string>
    <string name="go">Search</string>
    <string name="enter_movie_name_to_search">Enter movie name to search</string>
    <string name="series">Series</string>
    <string name="genre">Genre: </string>
    <string name="plot">Plot:</string>
    <string name="cast">Cast:</string>
    <string name="rating">Rating:</string>
    <string name="director">Director:</string>
    <string name="publish_date">Published Date:</string>
    <string name="clear_all">Select All</string>
    <string name="select_categories_you_want_to_hide">Select Categories you want to hide</string>
    <string name="ok">OK</string>
    <string name="select_all">Select All</string>
    <string name="ignore">ignore</string>
    <string name="cancel">Cancel</string>
    <string name="permission_description">Allows another app to control OpenConnect</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="no_data">No Data</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="securid_info">SecurID info</string>
    <string name="report_problem">Report a problem</string>
    <string name="feedback_plea">Taking a few seconds to rate an app is very important for the developer.  It allows us to continually improve the experience, and helps other users decide whether an app is right for them. How about telling us what you think?</string>
    <string name="i_love_it">I love it</string>
    <string name="needs_work">Needs work</string>
    <string name="maybe_later">Maybe later</string>
    <string name="help_with_translations">Help with translations</string>
    <string name="about_openconnect">About OpenConnect</string>
    <string name="securid_none_defined">None of your VPN profiles have a SecurID token string set.\n\nTo add one, import an \"sdtid\" file or click on a \"http://127.0.0.1/securid\" URL from your email.  See the FAQ for more information.</string>
    <string name="securid_parse_error">Unable to parse the SecurID token string in this profile.</string>
    <string name="securid_internal_error">Unable to access the VPN profile.  Please file a bug report with the author.</string>
    <string name="securid_encrypted">This profile\'s SecurID token string is encrypted. Try re-importing it.</string>
    <string name="copy">Copy</string>
    <string name="next_tokencode">Next tokencode:</string>
    <string name="using_pin">Using PIN:</string>
    <string name="token_sn">Token S/N:</string>
    <string name="exp_date">Expiration date:</string>
    <string name="gmt">Current time (GMT):</string>
    <string name="dev_id">SecurID device ID:</string>
    <string name="enter_pin">Enter PIN:</string>
    <string name="new_pin">New PIN</string>
    <string name="skip">Skip</string>
    <string name="vpn_list_title">Profiles</string>
    <string name="status">Status</string>
    <string name="log">Log</string>
    <string name="file_select">Select…</string>
    <string name="file_nothing_selected">You must select a file</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_hostname_prompt">Enter the hostname, IP address, or URL:</string>
    <string name="hostname_examples">Valid formats include:\nvpn.example.com (typical usage)\nvpn.example.com:443 (host:port)\nhttps://vpn.example.com/my-group-url</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_to">Reconnect to %1$s</string>
    <string name="clear_log">Clear log</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="enter_problem">ENTER PROBLEM DESCRIPTION HERE:</string>
    <string name="do_you_want_purchase_your_mac_address_click">Try your mac address free for 24 hours \n Activate and upload your playlist</string>
    <string name="please_make_sure_your_mac_address_is_activated_u00a3_9_99_for_12_month_activation_n_we_do_not_provide_any_channels_or_pre_load">Please note we do not provide or pre load any content \n http://www.supaupload.com</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. You can help us fix this by sending us error data.</string>
    <string name="crash_dialog_comment_prompt">Please describe what was happening when the problem occurred:</string>
    <string name="problem_dialog_text">Thanks for offering your feedback for improving OpenConnect. We\'re sorry you encountered an issue but we\'ll review your report and track down the bug.</string>
    <string name="problem_dialog_comment_prompt">Please describe the nature of the problem. If you\'re willing to help the author troubleshoot it, make sure you include your email address:</string>
    <string name="bad_rom_text">Unfortunately your Android device does not have proper VpnService support.  If you click OK we will report this to the vendor, but they may or may not fix the bug.</string>
    <string name="bad_rom_comment_prompt">If you have customized your device in any way (rooting, ROM, Xposed) please note the changes below:</string>
    <string name="copied_entry">Copied to clipboard.</string>
    <string name="faq">FAQ</string>
    <string name="question_abbrev">Q:</string>
    <string name="answer_abbrev">A:</string>
    <string name="file_explorer_tab">File Explorer</string>
    <string name="inline_file_tab">Inline File</string>
    <string name="file_too_large">File is too large</string>
    <string name="error_importing_file">Error importing File</string>
    <string name="import_error_message">Could not import File from filesystem</string>
    <string name="inline_file_data">[[Inline file data]]</string>
    <string name="speed_waiting">Waiting for state message…</string>
    <string name="file_icon">file icon</string>
    <string name="generalsettings">Settings</string>
    <string name="owner_fix_summary">Tries to set the owner of /dev/tun to the \'system\' UID (1000). Some CM9 images need this to make the VPNService API work. Requires root.</string>
    <string name="owner_fix">Fix ownership of /dev/tun</string>
    <string name="edit_profile_title">Editing \"%s\"</string>
    <string name="netchange_summary">Turning this option on will force a reconnect if the network state is changed (e.g. WiFi to/from mobile)</string>
    <string name="netchange">Reconnect on network change</string>
    <string name="netstatus">Network Status:</string>
    <string name="uptime">Uptime:</string>
    <string name="tx">TX:</string>
    <string name="rx">RX:</string>
    <string name="local_ip4">Local IPv4:</string>
    <string name="local_ip6">Local IPv6:</string>
    <string name="disabled">disabled</string>
    <string name="subnet_mask">Subnet mask:</string>
    <string name="server_name">Server name:</string>
    <string name="select_file">Select</string>
    <string name="advanced">Advanced</string>
    <string name="setting_loadtun_summary">Try to load the tun.ko kernel module before trying to connect. Needs rooted devices.</string>
    <string name="setting_loadtun">Load tun module</string>
    <string name="trace_log_summary">Increase logging verbosity for debugging purposes. This will affect performance.</string>
    <string name="trace_log">Enable TRACE logging</string>
    <string name="getproxy_error">Error getting proxy settings: %s</string>
    <string name="no_vpn_profiles_defined">No VPN profiles defined.</string>
    <string name="add_new_vpn_hint">Use the &lt;img src=\"ic_menu_add\"/&gt; icon to add a new VPN</string>
    <string name="faq_hint">Be sure to also check out the FAQ if you have not used OpenConnect before.</string>
    <string name="send_minidump">Send Minidump to developer</string>
    <string name="send_minidump_summary">Sends debugging information about last crash to developer</string>
    <string name="notification_input_needed">User input needed</string>
    <string name="notification_touch_here">Touch here to jump to OpenConnect</string>
    <string name="state_connected_to">Connected to %1$s</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_invalid_hostname">Invalid hostname \'%1$s\'</string>
    <string name="error_cant_connect">Error connecting to host \'%1$s\'.</string>
    <string name="oneway_bytecount">%1$s/s %2$s</string>
    <string name="statusline_bytecount">↓%2$s/s %1$s - ↑%4$s/s %3$s</string>
    <string name="login_title">%s login</string>
    <string name="make_selection_inline">Copy into profile</string>
    <string name="add">Add</string>
    <string name="prompt">%1$s attempts to control %2$s</string>
    <string name="remote_warning">By proceeding, you are giving the application permission to completely control OpenConnect for Android and to intercept all network traffic. <b> Do NOT accept unless you trust the application. </b> Otherwise, you run the risk of having your data compromised by malicious software."</string>
    <string name="remote_trust">I trust this application.</string>
    <string name="no_external_app_allowed">No app allowed to use external API</string>
    <string name="allowed_apps">Allowed apps: %s</string>
    <string name="clearappsdialog">Clear list of allowed external apps?\nCurrent list of allowed apps:\n\n%s</string>
    <string name="login">Login</string>
    <string name="here">Click Here</string>
    <string name="refresh">Refresh</string>
</resources>