<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity"
    android:id="@+id/main_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#aa311E02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_mac_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20dp"
            android:layout_marginEnd="@dimen/size_20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/btn_drawable"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/vpn_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/size_20dp"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:background="@drawable/btn_drawable"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lay_bottom"
            android:layout_below="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/expiry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:text="@string/do_you_want_purchase_your_mac_address_click"/>

                <TextView
                    android:id="@+id/go_purchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:textAllCaps="true"
                    android:layout_marginTop="@dimen/text_size_15sp"
                    android:textColor="@color/click_here_color"
                    android:text="@string/here"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:layout_marginTop="15dp"
                android:text="@string/please_make_sure_your_mac_address_is_activated_u00a3_9_99_for_12_month_activation_n_we_do_not_provide_any_channels_or_pre_load"/>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
